# Analysis-of-Emirates-Customer-Sentiment-and-Campaign-Effectiveness

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/scraped_inputs/: category_keywords.json  emirates_sponsorships.json  fleet_fallback.json  qatar_sponsorships.json  routes_fallback.json
notebooks/: 02_report.ipynb  Emirates_legacy.ipynb  Final Report.ipynb
reports/: project_audit.md
reports/tables/: sentiment_by_airline.csv
scripts/: fetch_external.py  run_full_analysis.py  run_pipeline.py  run_scraper.py
src/: config.py  pipeline.py
src/analysis/: praise_complaints.py
src/data/: load.py
src/emirates_sentiment/: config.py  pipeline.py
src/emirates_sentiment/data/: events.py  load.py
src/emirates_sentiment/features/: text_preprocess.py
src/emirates_sentiment/models/: sentiment.py
src/emirates_sentiment/utils/: nltk_setup.py
src/emirates_sentiment/viz/: plots.py
src/features/: text_preprocess.py
src/models/: sentiment_evaluate.py  sentiment_pretrained.py  sentiment_vader.py  topic_model.py
src/scraping/: fleet_scraper.py  routes_scraper.py  search_trends.py
src/utils/: logging.py  nltk_setup.py
src/viz/: plots.py
