[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emirates-sentiment"
version = "2.0.0"
description = "Emirates customer sentiment, campaign effectiveness, fleet & route analysis (portfolio project)"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]